Add ATK name-changed events for the omnibox

Bug: 896706
Change-Id: I0267bd62890eefc9cec3694b54b988c908d0736b
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1581479
Commit-Queue: Jessica Tallon <jtallon@igalia.com>
Reviewed-by: Kevin Bailey <krb@chromium.org>
Reviewed-by: Martin Robinson <mrobinson@igalia.com>
Cr-Commit-Position: refs/heads/master@{#667982}

Former-commit-id: 0acd019b946ad9df52832e4248a441201c8ca87a